--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,15 @@
   "description" : "개발자를 위한 용어사전",
   "version": "1.0",
   "browser_action": {
-    "default_popup": "hello.html",
-    "default_icon": "hello_extensions.png"
+    "default_title": "DICTIONARY",    
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/get_started16.png",
+      "32": "images/get_started32.png",
+      "48": "images/get_started48.png",
+      "128": "images/get_started128.png"
+  }
+    
   },
   "background": { 
     "scripts": [
@@ -12,7 +19,7 @@
     "jquery.min.js",
     "xregexp-all.js"
   ],
-  "persistent": false
+  "persistent": true
 },
 "options_page": "options.html",
 "content_scripts": [{
@@ -26,22 +33,24 @@
 }],
   "manifest_version": 2,
   "commands": {
+    "toggle-feature-foo": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+Y",
+        "mac": "Command+Shift+Y"
+      },
+      "description": "Toggle feature foo"
+    },
     "_execute_browser_action": {
       "suggested_key": {
-        "default": "Ctrl+Shift+F",
-        "mac": "MacCtrl+Shift+F"
-      },
-      "description": "Opens hello.html"
-    },
-      "copy-translation-to-clipboard": {
-        "description": "Copy translation to clipboard"
+        "default": "Ctrl+Shift+E",
+        "windows": "Alt+Shift+P",
+        "mac": "Command+Shift+P"
+      }
     }
   },
-  "permissions": [ "activeTab", "tabs", "storage", "http://*/", "https://*/" ],
+  "permissions": ["activeTab", "declarativeContent", "tabs", "storage", "http://*/", "https://*/" ],
   "web_accessible_resources": [
-    "options.html",
-    "popup.html",
-    "popup.js"
+    "options.html"
   ],
   "content_security_policy": "script-src 'self' 'unsafe-eval' https://ssl.google-analytics.com https://clients5.google.com; object-src 'self'"
 
